make file error

--- a/orderer/consensus/hbbft/TODO
+++ b/orderer/consensus/hbbft/TODO
@@ -10,3 +10,5 @@ o complete everthing by day end
 + chain -- add timer
 + chain -- add logger
 + chain -- where to verify txns
++ logger -- fix logger problem 
++ print consenter map also
